# test-oidc-tauri

./: .gitignore
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/src/: fournisseur.rs  main.rs  pkce.rs
crates/tauri/ui/: index.html  main.js
