[package]
name = "userinfos"
version = "0.0.1"
authors = ["Rrogntudju"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = { version = "4", features = ["reqwest"]}
url = "2"
anyhow = "1"
static_init = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
