[package]
name = "userinfos"
version = "0.1.0"
authors = ["Rrogntudju"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
oauth2 = { version = "4", features = ["reqwest"] }
url = "2"
anyhow = "1"
once_cell = "1"
reqwest = { version = "0.11", features = [ "json" ] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
